--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,25 +122,25 @@ img {
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.demo-app {
+.eventos-app {
   display: flex;
   min-height: 100%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
 }
 
-.demo-app-sidebar {
+.eventos-app-sidebar {
   width: 300px;
   line-height: 1.5;
   background: #eaf9ff;
   border-right: 1px solid #d3e2e8;
 }
 
-.demo-app-sidebar-section {
+.eventos-app-sidebar-section {
   padding: 2em;
 }
 
-.demo-app-main {
+.eventos-app-main {
   flex-grow: 1;
   padding: 3em;
 }
